# TinySerializer-Demos

./: .gitmodules
PC-Arduino/serial/arduino/TinySerializer-Demo-Serial-Client/: TinySerializer-Demo-Serial-Client.ino  TinySerializer.cpp  messages.hpp
PC-Arduino/serial/linux/: CMakeLists.txt
PC-Arduino/serial/linux/src/: main.cpp
PC-Arduino/serial/shared/: TinySerializer.hpp  messages.hpp
